# model/src/main/java/com/showtime/model/entity/sc/Sc.java
@@ -45,25 +45,25 @@ public class Sc extends BaseEntity implements Serializable {
     private Long updateTime;
     //学号
     @Column(name = "student_number")
-    private String studentNumber;
+    private Integer studentNumber;
     //课程号
     @Column(name = "course_number")
     private String courseNumber;
     //成绩
     @Column(name = "fraction")
-    private BigDecimal fraction;
+    private Integer fraction;
     //全级排名
     @Column(name = "grade_ranking")
     private Integer gradeRanking;
     //全级排名百分比
     @Column(name = "grade_ranking_percent")
-    private BigDecimal gradeRankingPercent;
+    private Integer gradeRankingPercent;
     //班级排名
     @Column(name = "class_ranking")
     private Integer classRanking;
     //班级排名百分比
     @Column(name = "class_ranking_percent")
-    private BigDecimal classRankingPercent;
+    private Integer classRankingPercent;
 
     public Long getCreateTime() {
         return createTime;
@@ -80,11 +80,11 @@ public class Sc extends BaseEntity implements Serializable {
         this.updateTime = updateTime;
     }
 
-    public String getStudentNumber() {
+    public Integer getStudentNumber() {
         return studentNumber;
     }
 
-    public void setStudentNumber(String studentNumber) {
+    public void setStudentNumber(Integer studentNumber) {
         this.studentNumber = studentNumber;
     }
 
@@ -96,13 +96,7 @@ public class Sc extends BaseEntity implements Serializable {
         this.courseNumber = courseNumber;
     }
 
-    public BigDecimal getFraction() {
-        return fraction;
-    }
 
-    public void setFraction(BigDecimal fraction) {
-        this.fraction = fraction;
-    }
     public Integer getGradeRanking() {
         return gradeRanking;
     }
@@ -110,13 +104,7 @@ public class Sc extends BaseEntity implements Serializable {
     public void setGradeRanking(Integer gradeRanking) {
         this.gradeRanking = gradeRanking;
     }
-    public BigDecimal getGradeRankingPercent() {
-        return gradeRankingPercent;
-    }
 
-    public void setGradeRankingPercent(BigDecimal gradeRankingPercent) {
-        this.gradeRankingPercent = gradeRankingPercent;
-    }
     public Integer getClassRanking() {
         return classRanking;
     }
@@ -124,12 +112,42 @@ public class Sc extends BaseEntity implements Serializable {
     public void setClassRanking(Integer classRanking) {
         this.classRanking = classRanking;
     }
-    public BigDecimal getClassRankingPercent() {
+
+    public Integer getFraction() {
+        return fraction;
+    }
+
+    public void setFraction(Integer fraction) {
+        this.fraction = fraction;
+    }
+
+    public Integer getGradeRankingPercent() {
+        return gradeRankingPercent;
+    }
+
+    public void setGradeRankingPercent(Integer gradeRankingPercent) {
+        this.gradeRankingPercent = gradeRankingPercent;
+    }
+
+    public Integer getClassRankingPercent() {
         return classRankingPercent;
     }
 
-    public void setClassRankingPercent(BigDecimal classRankingPercent) {
+    public void setClassRankingPercent(Integer classRankingPercent) {
         this.classRankingPercent = classRankingPercent;
     }
+
+    public Sc(Long createTime, Long updateTime, Integer studentNumber, String courseNumber, Integer fraction, Integer gradeRanking, Integer gradeRankingPercent, Integer classRanking, Integer classRankingPercent) {
+        this.createTime = createTime;
+        this.updateTime = updateTime;
+        this.studentNumber = studentNumber;
+        this.courseNumber = courseNumber;
+        this.fraction = fraction;
+        this.gradeRanking = gradeRanking;
+        this.gradeRankingPercent = gradeRankingPercent;
+        this.classRanking = classRanking;
+        this.classRankingPercent = classRankingPercent;
+    }
+
 
 }
