# rs/generated/swagger-ui/swagger.json
@@ -1658,21 +1658,22 @@
           "in" : "query",
           "description" : "添加时间",
           "required" : false,
-          "type" : "integer",
-          "format" : "int64"
+          "type" : "string",
+          "format" : "date-time"
         }, {
           "name" : "updateTime",
           "in" : "query",
           "description" : "更新时间",
           "required" : false,
-          "type" : "integer",
-          "format" : "int64"
+          "type" : "string",
+          "format" : "date-time"
         }, {
           "name" : "studentNumber",
           "in" : "query",
           "description" : "学号",
           "required" : false,
-          "type" : "string"
+          "type" : "integer",
+          "format" : "int32"
         }, {
           "name" : "studentName",
           "in" : "query",
@@ -1722,7 +1723,7 @@
           "in" : "query",
           "description" : "全级排名百分比",
           "required" : false,
-          "type" : "number"
+          "type" : "string"
         }, {
           "name" : "classRanking",
           "in" : "query",
@@ -1735,7 +1736,7 @@
           "in" : "query",
           "description" : "班级排名百分比",
           "required" : false,
-          "type" : "number"
+          "type" : "string"
         }, {
           "name" : "sort",
           "in" : "query",
@@ -2990,34 +2991,6 @@
         }
       }
     },
-    "Course" : {
-      "type" : "object",
-      "properties" : {
-        "id" : {
-          "type" : "integer",
-          "format" : "int64"
-        },
-        "courseNumber" : {
-          "type" : "string"
-        },
-        "name" : {
-          "type" : "string"
-        },
-        "learnHours" : {
-          "type" : "string"
-        },
-        "credit" : {
-          "type" : "string"
-        },
-        "avgFraction" : {
-          "type" : "number"
-        },
-        "preCourse" : {
-          "type" : "integer",
-          "format" : "int64"
-        }
-      }
-    },
     "CourseView" : {
       "type" : "object",
       "properties" : {
@@ -3091,28 +3064,44 @@
           "type" : "integer",
           "format" : "int64"
         },
-        "student" : {
-          "$ref" : "#/definitions/Student"
+        "studentNumber" : {
+          "type" : "integer",
+          "format" : "int32"
         },
-        "course" : {
-          "$ref" : "#/definitions/Course"
+        "courseNumber" : {
+          "type" : "string"
         },
         "fraction" : {
-          "type" : "number"
+          "type" : "integer",
+          "format" : "int32"
         },
         "gradeRanking" : {
           "type" : "integer",
           "format" : "int32"
         },
         "gradeRankingPercent" : {
-          "type" : "number"
+          "type" : "integer",
+          "format" : "int32"
         },
         "classRanking" : {
           "type" : "integer",
           "format" : "int32"
         },
         "classRankingPercent" : {
-          "type" : "number"
+          "type" : "integer",
+          "format" : "int32"
+        },
+        "studentName" : {
+          "type" : "string"
+        },
+        "className" : {
+          "type" : "string"
+        },
+        "grade" : {
+          "type" : "string"
+        },
+        "courseName" : {
+          "type" : "string"
         }
       }
     },
@@ -3133,40 +3122,6 @@
         "number" : {
           "type" : "integer",
           "format" : "int32"
-        }
-      }
-    },
-    "Student" : {
-      "type" : "object",
-      "properties" : {
-        "id" : {
-          "type" : "integer",
-          "format" : "int64"
-        },
-        "studentNumber" : {
-          "type" : "string"
-        },
-        "name" : {
-          "type" : "string"
-        },
-        "gender" : {
-          "type" : "string"
-        },
-        "nativePlace" : {
-          "type" : "string"
-        },
-        "grade" : {
-          "type" : "string"
-        },
-        "className" : {
-          "type" : "string"
-        },
-        "scholarshipLevel" : {
-          "type" : "integer",
-          "format" : "int32"
-        },
-        "sumFraction" : {
-          "type" : "number"
         }
       }
     },
